--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,88 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@400;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fraunces:wght@400;700;900&display=swap");
+.fraunces, section[class="hero"] nav .nav-links li .cta-nav {
+  font-family: 'Fraunces', sans-serif;
+}
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  font-family: 'Barlow', sans-serif;
+}
+
+section[class="hero"] {
+  width: 100%;
+  height: 100vh;
+  background-image: url("/images/desktop/image-header.jpg");
+  background-size: cover;
+  background-position: bottom;
+}
+
+section[class="hero"] nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 10vh;
+  padding: 0 10%;
+}
+
+section[class="hero"] nav .logo {
+  margin-right: auto;
+  width: 72px;
+}
+
+section[class="hero"] nav .nav-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+section[class="hero"] nav .nav-links li {
+  list-style: none;
+  margin-left: 24px;
+}
+
+section[class="hero"] nav .nav-links li a {
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 600;
+  color: white;
+}
+
+section[class="hero"] nav .nav-links li .cta-nav {
+  border: none;
+  border-radius: 24px;
+  padding: 12px;
+  background-color: white;
+  color: #23303e;
+  font-size: 16px;
+  font-style: 600;
+}
+
+section[class="hero"] nav .burger {
+  display: none;
+  cursor: pointer;
+}
+
+section[class="hero"] nav .burger div {
+  width: 25px;
+  height: 5px;
+  margin: 5px;
+  background-color: white;
+}
+/*# sourceMappingURL=style.css.map */
