--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ section[class="hero"] nav {
           align-items: center;
   width: 100%;
   height: 10vh;
-  padding: 0 10%;
+  padding: 0 5%;
 }
 
 section[class="hero"] nav .logo {
@@ -50,6 +50,7 @@ section[class="hero"] nav .nav-links {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding: 12px 0;
 }
 
 section[class="hero"] nav .nav-links li {
@@ -67,11 +68,12 @@ section[class="hero"] nav .nav-links li a {
 section[class="hero"] nav .nav-links li .cta-nav {
   border: none;
   border-radius: 24px;
-  padding: 12px;
+  padding: 12px 18px;
   background-color: white;
   color: #23303e;
-  font-size: 16px;
-  font-style: 600;
+  font-size: 14px;
+  font-weight: 600;
+  cursor: pointer;
 }
 
 section[class="hero"] nav .burger {
@@ -84,5 +86,52 @@ section[class="hero"] nav .burger div {
   height: 5px;
   margin: 5px;
   background-color: white;
+}
+
+@media screen and (max-width: 567px) {
+  section[class="hero"] nav .nav-links {
+    position: absolute;
+    background-color: white;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 90%;
+    top: 10vh;
+    left: 5%;
+    right: 5%;
+    -webkit-transform: translateY(-140%);
+            transform: translateY(-140%);
+    -webkit-transition: -webkit-transform 0.5s ease-in-out;
+    transition: -webkit-transform 0.5s ease-in-out;
+    transition: transform 0.5s ease-in-out;
+    transition: transform 0.5s ease-in-out, -webkit-transform 0.5s ease-in-out;
+  }
+  section[class="hero"] nav .nav-links li {
+    margin: 18px 0px;
+  }
+  section[class="hero"] nav .nav-links li a {
+    color: #a7abae;
+  }
+  section[class="hero"] nav .nav-links li .cta-nav {
+    background-color: #fad400;
+    color: #23303e;
+  }
+  section[class="hero"] nav .burger {
+    display: block;
+  }
+  section[class="hero"] nav .nav-active {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
 }
 /*# sourceMappingURL=style.css.map */
