--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,10 +7,6 @@
     margin: 0;
 }
 
-// html {
-//     // overflow-x: hidden;
-// }
-
 body {
     font-family: 'Barlow', sans-serif;
 }
@@ -28,7 +24,7 @@ section[class="hero"] {
         align-items: center;
         width: 100%;
         height: 10vh;
-        padding: 0 10%;
+        padding: 0 5%;
         .logo {
             margin-right: auto;
             width: 72px;
@@ -37,6 +33,7 @@ section[class="hero"] {
         .nav-links {
             display: flex;
             align-items: center;
+            padding: 12px 0;
             li {
                 list-style: none;
                 margin-left: 24px;
@@ -50,11 +47,12 @@ section[class="hero"] {
                     @extend .fraunces;
                     border: none;
                     border-radius: 24px;
-                    padding: 12px;
+                    padding: 12px 18px;
                     background-color: $white;
                     color: $softRed;
-                    font-size: 16px;
-                    font-style: 600;
+                    font-size: 14px;
+                    font-weight: 600;
+                    cursor: pointer;
                 }
             }
         }
@@ -73,4 +71,47 @@ section[class="hero"] {
 
     }
 
+}
+
+@media screen and(max-width: 567px){
+    section[class="hero"] {
+        nav {
+            .nav-links {
+                position: absolute;
+                background-color: $white;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                width: 90%;
+                top: 10vh;
+                left: 5%;
+                right: 5%;
+                transform: translateY(-140%);
+                transition: transform 0.5s ease-in-out;
+
+                li {
+                    margin: 18px 0px;
+                    a {
+                        color: $grayishBlue;
+                    }
+                    .cta-nav {
+                        background-color: $yellow;
+                        color: $softRed;
+                    }
+                }
+            }
+    
+            .burger {
+                display: block;
+            }
+            .nav-active {
+                transform: translateY(0%);
+            }
+    
+        }
+    
+    }
+
+   
 }
