--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow:wght@400;600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Fraunces:wght@400;700;900&display=swap");
-.fraunces, section[class="hero"] nav .nav-links li .cta-nav {
+.fraunces, section[class="hero"] nav .nav-links li .cta-nav, section[class="hero"] .hero-container h1 {
   font-family: 'Fraunces', sans-serif;
 }
 
@@ -41,6 +41,7 @@ section[class="hero"] nav {
 section[class="hero"] nav .logo {
   margin-right: auto;
   width: 72px;
+  cursor: pointer;
 }
 
 section[class="hero"] nav .nav-links {
@@ -86,6 +87,31 @@ section[class="hero"] nav .burger div {
   height: 5px;
   margin: 5px;
   background-color: white;
+}
+
+section[class="hero"] .hero-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 48px 0px;
+}
+
+section[class="hero"] .hero-container h1 {
+  color: white;
+  font-size: 60px;
+  letter-spacing: 12px;
+  text-align: center;
+}
+
+section[class="hero"] .hero-container img {
+  margin-top: 48px;
 }
 
 @media screen and (max-width: 567px) {
