--- a/scss/style.scss
+++ b/scss/style.scss
@@ -89,9 +89,13 @@ section[class="hero"] {
     }
 
 }
-
+// ============ MOBILE ============
 @media screen and(max-width: 567px){
+
     section[class="hero"] {
+        height: 60vh;
+        background-image: url('/images/mobile/image-header.jpg');
+        
         nav {
             .nav-links {
                 position: absolute;
@@ -126,6 +130,21 @@ section[class="hero"] {
                 transform: translateY(0%);
             }
 
+        }
+
+        .hero-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 48px 0px;
+
+            h1 {
+                font-size: 36px;
+                letter-spacing: 6px;
+            }
+            img {
+                
+            }
         }
     
     }
