--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow:wght@400;600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Fraunces:wght@400;700;900&display=swap");
-.fraunces, section[class="hero"] nav .nav-links li .cta-nav, section[class="hero"] .hero-container h1 {
+.fraunces, section[class="hero"] nav .nav-links li .cta-nav, section[class="hero"] .hero-container h1, section[class="content"] .content-1 h3, section[class="content"] .content-1 a, section[class="content"] .content-4 h3, section[class="content"] .content-4 a, section[class="content"] .content-5 h3, section[class="content"] .content-6 h3 {
   font-family: 'Fraunces', sans-serif;
 }
 
@@ -112,6 +112,192 @@ section[class="hero"] .hero-container h1 {
 
 section[class="hero"] .hero-container img {
   margin-top: 48px;
+}
+
+section[class="content"] {
+  width: 100%;
+  height: 250vh;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: 1fr 1fr 1fr;
+      grid-template-rows: 1fr 1fr 1fr;
+      grid-template-areas: "text1 img1" "img2 text2" "img3 img4";
+}
+
+section[class="content"] .content-1 {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: text1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 15%;
+}
+
+section[class="content"] .content-1 h3 {
+  font-size: 48px;
+  color: #23303e;
+  margin-bottom: 48px;
+}
+
+section[class="content"] .content-1 p {
+  font-size: 18px;
+  font-weight: 400;
+  color: #818498;
+  margin-bottom: 48px;
+}
+
+section[class="content"] .content-1 a {
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: 600;
+  color: #23303e;
+  height: 24px;
+  width: 132px;
+  padding-bottom: 24px;
+  border-bottom: 6px solid rgba(250, 212, 0, 0.5);
+}
+
+section[class="content"] .content-2 {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: img1;
+  background-image: url("/images/desktop/image-transform.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+section[class="content"] .content-3 {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: img2;
+  background-image: url("/images/desktop/image-stand-out.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+section[class="content"] .content-4 {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+  grid-area: text2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 15%;
+}
+
+section[class="content"] .content-4 h3 {
+  font-size: 48px;
+  color: #23303e;
+  margin-bottom: 48px;
+}
+
+section[class="content"] .content-4 p {
+  font-size: 18px;
+  font-weight: 400;
+  color: #818498;
+  margin-bottom: 48px;
+}
+
+section[class="content"] .content-4 a {
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: 600;
+  color: #23303e;
+  height: 24px;
+  width: 132px;
+  padding-bottom: 24px;
+  border-bottom: 6px solid #fad400;
+}
+
+section[class="content"] .content-5 {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  grid-area: img3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  padding: 10% 20%;
+  background-image: url("/images/desktop/image-graphic-design.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+section[class="content"] .content-5 h3 {
+  margin-top: auto;
+  font-size: 36px;
+  margin-bottom: 24px;
+  color: #25564b;
+}
+
+section[class="content"] .content-5 p {
+  font-size: 18px;
+  color: rgba(37, 86, 75, 0.8);
+  font-weight: 600;
+}
+
+section[class="content"] .content-6 {
+  -ms-grid-row: 3;
+  -ms-grid-column: 2;
+  grid-area: img4;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  padding: 10% 20%;
+  background-image: url("/images/desktop/image-photography.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+section[class="content"] .content-6 h3 {
+  margin-top: auto;
+  font-size: 36px;
+  margin-bottom: 24px;
+  color: #19536b;
+}
+
+section[class="content"] .content-6 p {
+  font-size: 18px;
+  color: rgba(25, 83, 107, 0.8);
+  font-weight: 600;
 }
 
 @media screen and (max-width: 567px) {
