--- a/scss/style.scss
+++ b/scss/style.scss
@@ -138,7 +138,65 @@ section[class="content"] {
         grid-area: img4;
         @include content-text2(hsl(198, 62%, 26%), hsla(198, 62%, 26%, 0.8));
         @include content-img(url('/images/desktop/image-photography.jpg'));
+    }
+}
 
+
+section[class="testi"] {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    h3 {
+        font-style: 36px;
+        font-family: 'Fraunces', sans-serif;
+        color: $darkGrayishBlue;
+        margin-bottom: 72px;
+    }
+
+    .testi-container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin: 0px 5%;
+
+        .card {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            padding: 24px;
+
+            img {
+                width: 90px;
+                border-radius: 50%;
+                margin-bottom: 48px;
+            }
+
+            p {
+                font-size: 18px;
+                font-weight: 400;
+                color: $veryDarkGrayishBlue;
+                text-align: center;
+                margin-bottom: 48px;
+            }
+
+            .name {
+                font-family: 'Fraunces', sans-serif;
+                font-size: 18px;
+                font-weight: 900;
+                margin-bottom: 12px;
+                color: $softRed;
+            }
+
+            .job {
+                font-size: 14px;
+                font-weight: 400;
+                color: $darkGrayishBlue;
+            }
+        }
     }
 }
 
