--- a/css/style.css
+++ b/css/style.css
@@ -610,8 +610,8 @@ section[class="footer"] .bottom-footer .attribution {
     background-position: center;
   }
   section[class="content"] .content-3 {
-    -ms-grid-row: 3;
-    -ms-grid-column: 1;
+    -ms-grid-row: 1;
+    -ms-grid-column: 2;
     grid-area: img2;
     background-image: url("/images/mobile/image-stand-out.jpg");
     background-size: cover;
@@ -637,7 +637,7 @@ section[class="footer"] .bottom-footer .attribution {
     text-align: center;
   }
   section[class="content"] .content-5 {
-    -ms-grid-row: 5;
+    -ms-grid-row: 2;
     -ms-grid-column: 1;
     grid-area: img3;
     padding: 10%;
@@ -656,8 +656,8 @@ section[class="footer"] .bottom-footer .attribution {
     font-weight: 600;
   }
   section[class="content"] .content-6 {
-    -ms-grid-row: 6;
-    -ms-grid-column: 1;
+    -ms-grid-row: 2;
+    -ms-grid-column: 2;
     grid-area: img4;
     padding: 10%;
     background-image: url("/images/mobile/image-photography.jpg");
@@ -745,6 +745,39 @@ section[class="footer"] .bottom-footer .attribution {
     font-size: 14px;
     font-weight: 400;
     color: #818498;
+  }
+  section[class="footer"] {
+    width: 100%;
+    height: 90vh;
+    background-color: #62cbb6;
+  }
+  section[class="footer"] .top-footer {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-template-areas: "img1 img2" "img3 img4";
+    height: 50vh;
+  }
+  section[class="footer"] .bottom-footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  section[class="footer"] .bottom-footer svg {
+    margin-top: 48px;
   }
 }
 /*# sourceMappingURL=style.css.map */
