--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -4,7 +4,7 @@
     background-position: center;
 }
 
-@mixin content-text($border) {
+@mixin content-text($border1, $border2) {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -33,7 +33,11 @@
         height: 24px;
         width: 132px;
         padding-bottom: 24px;
-        border-bottom: $border;
+        border-bottom: 6px solid $border1;
+
+        &:hover {
+            border-bottom: 6px solid $border2;
+        }
     }
 }
 
