--- a/scss/style.scss
+++ b/scss/style.scss
@@ -59,6 +59,10 @@ section[class="hero"] {
                     font-size: 14px;
                     font-weight: 600;
                     cursor: pointer;
+
+                    &:hover {
+                        background-color: hsla(0, 0%, 100%, 0.5);;
+                    }
                 }
             }
         }
@@ -109,7 +113,7 @@ section[class="content"] {
 
     .content-1 {
         grid-area: text1;
-        @include content-text(6px solid hsla(51, 100%, 49%, 0.5));
+        @include content-text(hsla(51, 100%, 49%, 0.5), hsla(51, 100%, 49%, 1));
     }
 
     .content-2 {
@@ -125,7 +129,7 @@ section[class="content"] {
 
     .content-4 {
         grid-area: text2;
-        @include content-text(6px solid $yellow);
+        @include content-text( hsla(6, 99%, 71%, 0.5), hsla(6, 99%, 71%, 1));
     }
 
     .content-5 {
@@ -264,6 +268,10 @@ section[class="footer"] {
                 a {
                     text-decoration: none;
                     color: #2C7566;
+
+                    &:hover {
+                        color: $white;
+                    }
                 }
             }
         }
@@ -271,8 +279,15 @@ section[class="footer"] {
             display: flex;
             justify-content: space-around;
             margin-bottom: 24px;
-            img {
+            svg {
+                cursor: pointer;
                 margin: 0 12px;
+
+                path {
+                    &:hover {
+                        fill: $white;
+                    }
+                }
             }
         }
 
